--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@ La mayoría activa la frecuencia solo una vez — pocos aprenden a mantenerla vi
             <!-- CTA  -->
             <div id="cta1" class="mt-4 hidden max-w-2xl mx-auto">
               <!-- Updated Cartpanda checkout link -->
+              <script src="https://assets.mycartpanda.com/cartx-ecomm-ui-assets/js/libs/ocu-external.js"> </script>
               <a href="https://companyjltda.mycartpanda.com/ex-ocu/next-offer/81VKRkZ2WP?accepted=yes" 
                  class="block text-center no-underline rounded-2xl py-4 px-6 font-extrabold tracking-tight shadow-xl transition 
                         hover:shadow-2xl hover:scale-[1.01]" 
