--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ La mayoría activa la frecuencia solo una vez — pocos aprenden a mantenerla vi
             <h4 class="my-4"><b> ¡Si has llegado a esta página, felicidades! ¡Porque estás frente a una oportunidad única y exclusiva! </b></h4>
 
             <!-- Botão -->
-            <div id="cta1" class="mt-4 d-none">
+            <div id="cta1" class="mt-4 hidden max-w-2xl mx-auto">
               <a href="https://pay.hotmart.com/T97507260M?checkoutMode=10" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">¡QUIERO OBTENER ACCESO AL PROTOCOLO NATURAL AHORA CON UN 80% DE DESCUENTO!</span>
                 <span class="span-btn2">(atención: cupos limitados)</span>
