--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ La mayoría activa la frecuencia solo una vez — pocos aprenden a mantenerla vi
                  /* --- 3. Fonte Branca com Contorno Preto --- */
                  color: #ffffff; 
                  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000, -2px 2px 3px rgba(0,0,0,0.3);">
-      ¡QUIERO OBTENER ACCESO AL PROTOCOLO NATURAL AHORA CON UN 80% DE DESCUENTO!
+     ¡OFERTA ESPECIAL! OBTÉN ACCESO INSTANTÁNEO CON UN SOLO CLIC. AGREGA ESTO A TU PEDIDO AHORA CON UN 80% DE DESCUENTO EN EL PRECIO NORMAL. SOLO $5.99
     </span>
     
     <span style="font-family: Arial, sans-serif;
