--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ La mayoría activa la frecuencia solo una vez — pocos aprenden a mantenerla vi
     <span style="font-family: Arial, sans-serif;
                  font-weight: 700; 
                  display: block; 
-                 font-size: 0.8rem; /* <-- AJUSTADO (Era 1.35rem) */
+                 font-size: 0.7rem; /* <-- AJUSTADO (Era 1.35rem) */
                  line-height: 1.3;
                  
                  /* --- 3. Fonte Branca com Contorno Preto --- */
@@ -252,8 +252,8 @@ La mayoría activa la frecuencia solo una vez — pocos aprenden a mantenerla vi
       
 
 
-            <!-- Terminos de uso e Privacidad -->
-            <div class="text-white mt-4"><a href="termos.html" class="text-white">Termos de Uso</a> | <a href="privacidade.html" class="text-white">Política de Privacidade</a></div>
+             <!-- Termos de Uso e Política de Privacidade -->
+            <div class="text-black mt-4"><a href="termos.html" class="text-black">Condiciones de uso</a> <span style="color:#238af6;">| </span> <a href="privacidade.html" class="text-black">Política de Privacidad</a></div>
           </div>
         </div>
       </div>
